--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ const DISCORD = {
   // Scopes nécessaires pour lire les rôles du membre
   SCOPES: ['identify', 'guilds.members.read'],
   // URL de redirection = cette même page (adapter si besoin)
-  REDIRECT_URI:'https://discord.com/oauth2/authorize?client_id=1407764995671986249&response_type=code&redirect_uri=https%3A%2F%2FNazAPI.dreamweave.lol%2F&scope=identify+guilds.members.read',
+  REDIRECT_URI:'httpss://nazapi.dreamweaeve.lol',
   PREMIUM_ROLE_ID: '1406489247573086400', // Premium
   VIP_ROLE_ID:     '1406489247564824669', // VIP
 };
