--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ const DISCORD = {
   // Scopes nécessaires pour lire les rôles du membre
   SCOPES: ['identify', 'guilds.members.read'],
   // URL de redirection = cette même page (adapter si besoin)
-  REDIRECT_URI:'https://nazapi.dreamweaeve.lol',
+  REDIRECT_URI:'https://nazapi.dreamweave.lol',
   PREMIUM_ROLE_ID: '1406489247573086400', // Premium
   VIP_ROLE_ID:     '1406489247564824669', // VIP
 };
