--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   </div>
 
   <footer class="footer">
-    <div>© <span id="year"></span> NazAPI • <span class="muted">Espace & élégance ✦</span></div>
+    <div>© <span id="year"></span> NazAPI • <span class="muted">research services ✦</span></div>
   </footer>
 </div>
 
