--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   .kbd{ background:rgba(255,255,255,.12); padding:2px 6px; border-radius:6px; font-size:12px }
   .sticky-key{ position:fixed; right:20px; bottom:20px; max-width:520px; z-index:50 }
   .hide{ display:none !important }
-  .role-chip{ font-size:12px; padding:6px 10px; border-radius:999px; background:rgba(255,255,255,.1); }
+  .role-chip{ font-size:12px; padding:6px 10px; border-radius:999px; background:rgba(255,25,255,.1); }
   .code{ font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; }
 </style>
 </head>
@@ -101,8 +101,8 @@
     <div class="brand">
       <div class="logo" aria-hidden="true"></div>
       <div>
-        <h1>NazAPI — Portail Premium</h1>
-        <div class="muted" style="font-size:13px">Recherche sur site • Accès réservé Premium/VIP</div>
+        <h1>NazAPI — Recherche</h1>
+        <div class="muted" style="font-size:13px">Recherche sur site • Accès réservé Premium</div>
       </div>
     </div>
     <div class="toolbar">
@@ -117,7 +117,7 @@
       <div style="display:flex;justify-content:space-between;align-items:center;gap:12px">
         <div>
           <div style="font-weight:700">État de compte</div>
-          <div class="muted" style="font-size:13px">Connexion, rôles & droits d’accès</div>
+          <div class="muted" style="font-size:13px">Connexion</div>
         </div>
         <div id="rolesChips" class="toolbar"></div>
       </div>
@@ -125,7 +125,7 @@
       <div class="divider"></div>
 
       <div id="accountState">
-        <div class="muted">Connecte-toi avec Discord pour vérifier tes rôles sur le serveur.</div>
+        <div class="muted">Connecte-toi avec Discord pour vérifier ton accés au site.</div>
       </div>
 
       <div id="purchaseBlock" class="hide">
@@ -155,7 +155,7 @@
       <div style="display:flex;justify-content:space-between;align-items:center;gap:12px">
         <div>
           <div style="font-weight:700">Recherche sur le site</div>
-          <div class="muted" style="font-size:13px">Réservé aux membres Premium/VIP connectés</div>
+          <div class="muted" style="font-size:13px">Réservé aux membres Premium connectés</div>
         </div>
         <div class="pill">Beta</div>
       </div>
